--- a/_config.yml
+++ b/_config.yml
@@ -64,13 +64,13 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 8
 pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: yelee
+theme: yilia
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
