--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -161,7 +161,7 @@ social_icons:
 # Sidebar Avatar
 # in theme directory(source/images): /images/avatar.jpg
 # in site  directory(source/uploads): /uploads/avatar.jpg
-#avatar:
+avatar: /images/avatar.jpg
 
 
 # Table Of Contents in the Sidebar
@@ -243,8 +243,8 @@ post_meta:
 # Dependencies: https://github.com/willin/hexo-wordcount
 post_wordcount:
   item_text: true
-  wordcount: false
-  min2read: false
+  wordcount: true
+  min2read: true
 
 # Wechat Subscriber
 #wechat_subscriber:
@@ -492,7 +492,7 @@ use_motion: true
 fancybox: true
 
 # Canvas-nest
-canvas_nest: false
+canvas_nest: true
 
 # three_waves
 three_waves: false
@@ -581,6 +581,12 @@ vendors:
   # https://github.com/ethantw/Han
   han:
 
+# 文章末尾添加“本文结束”标记
+passage_end_tag:
+  enabled: true
+
+# Fireworks
+fireworks: true
 
 
 # Assets
