--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-json-content": "^3.0.1",
+    "hexo-generator-search": "^2.3.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-helper-live2d": "^3.1.0",
     "hexo-renderer-ejs": "^0.3.1",
