--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: guchunli
-subtitle: 日子熬我 我熬粥
-  # 努力把生活折腾成自己喜欢的样子~
+subtitle: 努力把生活折腾成自己喜欢的样子~
+  # 日子熬我 我熬粥
 description: 摊开双手 空无一物 天空有云 舒卷于胸
 author: 谷春丽
 keywords: "ios,swift,mac"
