--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -496,10 +496,10 @@ use_motion: true
 fancybox: true
 
 # Canvas-nest
-canvas_nest: true
+canvas_nest: false
 
 # three_waves
-three_waves: false
+three_waves: true
 
 # canvas_lines
 canvas_lines: false
